fixed mobile view and dark mode

--- a/main.css
+++ b/main.css
@@ -255,7 +255,7 @@ h2 {
 }
 .projectSelect:hover, .projectArchive:hover{
     background-color: var(--projectcolor1hover);
-    transform: scale(1.01);
+    transform: scale(1.03);
 }
 .projectArchive:hover{
     /* background-color: rgb(255, 220, 200); */
